--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,13 @@
 *.class
 
 # generated files
-bin/
-gen/
+app/bin/
+app/gen/
 
 # Local configuration file (sdk path, etc)
-local.properties
+app/local.properties
 
 # Eclipse project files
-.classpath
-.project
+app/.classpath
+app/.project
+app/.settings
