--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -23,10 +23,20 @@
         android:targetSdkVersion="15" />
 
     <application
+        android:name="App"
         android:allowBackup="true"
+        android:launchMode="singleInstance"
+        android:screenOrientation="portrait"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity android:name=".activities.RegistrationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
