--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,17 @@
 # generated files
 app/bin/
 app/gen/
+tests/bin/
+tests/gen/
 
 # Local configuration file (sdk path, etc)
 app/local.properties
+tests/local.properties
 
 # Eclipse project files
 app/.classpath
 app/.project
 app/.settings
+tests/.classpath
+tests/.project
+tests/.settings
