--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:screenOrientation="portrait"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:debuggable="true">
         <activity android:name=".activities.DeviceRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
