--- a/app/build.xml
+++ b/app/build.xml
@@ -27,6 +27,7 @@
 
          -->
     <property file="ant.properties" />
+    <property file="/opt/android-keystore/secure.properties" />
 
     <!-- if sdk.dir was not set from one of the property file, then
          get it from the ANDROID_HOME env var.
