--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <uses-sdk
         android:minSdkVersion="15"
          />
-
+	<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:name="App"
         android:allowBackup="true"
@@ -29,7 +30,7 @@
         android:screenOrientation="portrait"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:debuggable="true">
+        android:theme="@style/AppTheme" android:debuggable="false">
         <activity android:name=".activities.DeviceRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +38,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.EmailRegistrationActivity"></activity>
     </application>
 
 </manifest>
