--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -23,7 +23,9 @@
          />
 	<uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-   
+   <uses-permission android:name="android.permission.CAMERA"/>
+<uses-feature android:name="android.hardware.camera"/>
+<uses-feature android:name="android.hardware.camera.autofocus"/>
     <application
         android:name="App"
         android:allowBackup="true"
@@ -43,6 +45,21 @@
         <activity android:name=".activities.EmailRegistrationActivity"></activity>
         <activity android:name=".activities.AttributeListActivity"></activity>
         <activity android:name=".activities.GenericAttributeCollectionActivity"></activity>
+        <activity android:name=".activities.HomeScreen"></activity>
+         <activity android:name="com.google.zxing.client.android.CaptureActivity"
+		   android:screenOrientation="landscape"
+		   android:configChanges="orientation|keyboardHidden"
+		   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+		   android:windowSoftInputMode="stateAlwaysHidden">
+	   		<intent-filter>
+		      <action android:name="android.intent.action.MAIN"/>
+		      <category android:name="android.intent.category.DEFAULT"/>
+	   		</intent-filter>
+		   <intent-filter>
+		      <action android:name="org.openmidaas.app.SCAN"/>
+		      <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>
+		</activity>
     </application>
 
 </manifest>
