--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -23,6 +23,7 @@
          />
 	<uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:name="App"
         android:allowBackup="true"
@@ -39,11 +40,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
         <activity android:name=".activities.EmailRegistrationActivity"></activity>
         <activity android:name=".activities.AttributeListActivity"></activity>
         <activity android:name=".activities.GenericAttributeCollectionActivity"></activity>
         <activity android:name=".activities.HomeScreen"></activity>
         <activity android:name=".activities.AddressActivity"></activity>
+        <activity android:name="net.hockeyapp.android.UpdateActivity" />
     </application>
 
 </manifest>
