--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/customTheme"
-        android:debuggable="false">
+        android:debuggable="true">
         <activity android:name=".activities.DeviceRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,6 +47,7 @@
         <activity android:name=".activities.HomeScreen"></activity>
         <activity android:name=".activities.AddressActivity"></activity>
         <activity android:name="net.hockeyapp.android.UpdateActivity" />
+        <activity android:name=".activities.AuthorizationActivity"></activity>
     </application>
 
 </manifest>
