--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/customTheme"
-        android:debuggable="true">
+        android:debuggable="false">
         <activity android:name=".activities.DeviceRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
