added the return strategy and processing logic when authorization is done. ID-230

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ tests/local.properties
 app/.classpath
 app/.project
 app/.settings
+app/lint.xml
 tests/.classpath
 tests/.project
 tests/.settings
