--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -19,6 +19,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
+        android:targetSdkVersion="17"
         android:minSdkVersion="15"
          />
 	<uses-permission android:name="android.permission.INTERNET"/>
@@ -38,7 +39,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/customTheme"
-        android:debuggable="true">
+       >
         <activity android:name=".activities.DeviceRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
