Implemented Phone Verification Activity

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -48,6 +48,7 @@
         </activity>
         
         <activity android:name=".activities.EmailRegistrationActivity"></activity>
+        <activity android:name=".activities.PhoneRegistrationActivity"></activity>
         <activity android:name=".activities.AttributeListActivity"></activity>
         <activity android:name=".activities.GenericAttributeCollectionActivity"></activity>
         <activity android:name=".activities.HomeScreen"></activity>
