--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".activities.CreditCardActivity"></activity>
         <activity android:name="net.hockeyapp.android.UpdateActivity" />
         <activity android:name=".activities.AuthorizationActivity"></activity>
+        <activity android:name=".activities.ManageConsentActivity"></activity>
     </application>
 
 </manifest>
