--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -37,10 +37,10 @@
         android:launchMode="singleInstance"
         android:screenOrientation="portrait"
         android:icon="@drawable/home_image_icon"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:theme="@style/AppTheme"
         >        
-        <activity android:name=".activities.DeviceRegistrationActivity"
+        <activity android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
