--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -59,7 +59,8 @@
         <activity android:name="com.google.zxing.client.android.CaptureActivity"></activity>
         <activity android:name="com.google.zxing.client.android.HelpActivity"></activity>
         <activity android:name=".activities.MainTabActivity"
-            android:screenOrientation="portrait"> </activity>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnspecified|adjustResize"> </activity>
         <activity android:name=".activities.AboutUsActivity"
             android:screenOrientation="portrait"> </activity>
     </application>
