--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -38,7 +38,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/> 
 	<uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>    
-
+	<uses-permission android:name="android.permission.GET_TASKS"/>
+	
 	<application
         android:name="App"
         android:allowBackup="true"
